# saas-accelerator-rust

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Makefile  PORTING_CHECKLIST.md  PORTING_GAP_ANALYSIS.md  PORTING_GUIDE.md  README.md  azure-pipelines.yml  docker-compose.yml
crates/admin-api/: Cargo.toml
crates/admin-api/src/: auth_handlers.rs  handlers.rs  main.rs
crates/customer-api/: Cargo.toml
crates/customer-api/src/: auth_handlers.rs  handlers.rs  main.rs
crates/data/: Cargo.toml
crates/data/migrations/: 20240101000001_initial_schema.sql  20240101000002_webhook_processed_operations.sql  20240101000003_seed_scheduler_frequency_and_roles.sql
crates/data/src/: lib.rs  models.rs  pool.rs  repositories.rs
crates/data/src/repositories/: application_config_repository.rs  application_log_repository.rs  email_template_repository.rs  events_repository.rs  known_users_repository.rs  metered_audit_log_repository.rs  metered_dimensions_repository.rs  metered_plan_scheduler_repository.rs  offer_attributes_repository.rs  offer_repository.rs  plan_attribute_mapping_repository.rs  plan_events_mapping_repository.rs  plan_repository.rs  scheduler_frequency_repository.rs  subscription_audit_log_repository.rs  subscription_repository.rs  user_repository.rs  webhook_operation_repository.rs
crates/marketplace/: Cargo.toml
crates/marketplace/src/: client.rs  fulfillment.rs  lib.rs  metering.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: main.rs
crates/shared/: Cargo.toml
crates/shared/src/: auth.rs  config.rs  constants.rs  errors.rs  lib.rs  models.rs  secrets.rs  services.rs  utilities.rs
crates/shared/src/auth/: user_auth.rs
crates/shared/src/services/: application_log_service.rs  email_helper.rs  email_service.rs  notification_status_handler.rs  offers_service.rs  pending_activation_status_handler.rs  pending_fulfillment_status_handler.rs  plan_service.rs  status_handlers.rs  subscription_service.rs  unsubscribe_status_handler.rs  user_service.rs  webhook_processor.rs
crates/webhook/: Cargo.toml
crates/webhook-api/: Cargo.toml
crates/webhook-api/src/: adapters.rs  main.rs  webhook_handler.rs
crates/webhook/src/: adapters.rs  lib.rs  webhook_handler.rs
deployment/: .env.template  Dockerfile  Dockerfile.admin-site  Dockerfile.customer-site  Dockerfile.frontend  Dockerfile.migrate  README.md  deploy.sh  entrypoint-site.sh  nginx-admin-site.conf  nginx-customer-site.conf  upgrade.sh
docs/: AZURE_DEPLOYMENT.md  CODE_REVIEW.md  DEPLOYMENT.md  ORIGINAL_HOW_IT_WORKS.md  PORTING_STATUS.md  TESTING_IN_ACTION.md  TWO_SITE_DEPLOYMENT.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/layouts/: AdminLayout.tsx  CustomerLayout.tsx
frontend/src/pages/admin/: ApplicationLog.tsx  Config.tsx  Dashboard.tsx  EmailTemplates.tsx  KnownUsers.tsx  OfferDetail.tsx  Offers.tsx  PlanDetail.tsx  Plans.tsx  Scheduler.tsx  SchedulerLog.tsx  SubscriptionDetail.tsx  Subscriptions.tsx
frontend/src/pages/customer/: Landing.tsx  Privacy.tsx  ProcessMessage.tsx  SubscriptionDetail.tsx  Subscriptions.tsx
scripts/: setup.sh  smoke-test.sh
