[package]
name = "customer-api"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints.rust]
warnings = "deny"
unsafe_code = "forbid"

[lints.clippy]
pedantic = "deny"
nursery = "deny"
# cargo = "deny"  # disabled so clippy can run without network

[[bin]]
name = "customer-api"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
config = { workspace = true }
dotenv = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

shared = { path = "../shared" }
marketplace = { path = "../marketplace" }
data = { path = "../data" }
webhook = { path = "../webhook" }

# Authentication
oauth2 = { workspace = true }
tower-sessions = { workspace = true }
cookie = { workspace = true }


