[package]
name = "data"
version.workspace = true
edition.workspace = true

[dependencies]
sqlx = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
async-trait = "0.1"
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

shared = { path = "../shared" }

