[package]
name = "data"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints.rust]
warnings = "deny"
unsafe_code = "forbid"

[lints.clippy]
pedantic = "deny"
nursery = "deny"
# cargo = "deny"  # Disabled: multiple_crate_versions needs network in CI/sandbox

[dependencies]
sqlx = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
async-trait = "0.1"
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

shared = { path = "../shared" }

[dev-dependencies]
serde_json = { workspace = true }

