[package]
name = "scheduler"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints.rust]
warnings = "deny"
unsafe_code = "forbid"

[lints.clippy]
pedantic = "deny"
nursery = "deny"
# cargo = "deny"  # disabled so clippy can run without network

[[bin]]
name = "scheduler"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenv = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }

data = { path = "../data" }
marketplace = { path = "../marketplace" }
shared = { path = "../shared" }

